<resources>
    <string name="app_name">task1</string>
    <string name="Title">Head Space</string>ing name="app_
    <string name="subtitle">Be  stress free when alone</string>
    <string name="head_space">Head Space</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mood_tracker">Mood Tracker</string>
    <string name="journalism">Journalism</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="slide_1">Slide 1</string>
    <string name="now_playing">Now Playing...</string>
    <string name="song_name">Song Name</string>
    <string name="start_time">Start time</string>
    <string name="total_time">total time</string>
    <string name="login_here">Login Here</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_to_headspace_if_yes_click_here">New to Headspace? if yes click here</string>
    <string name="register_here">Register here</string>
    <string name="register">Register</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_birthdate">Enter your birthdate</string>
    <string name="enter_your_e_mail">Enter your E-mail</string>
    <string name="enter_your_username">Enter Your UserName</string>
    <string name="enter_your_mobile_no">Enter your Mobile No.</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="login">Login</string>
    <string name="show_password">show password</string>
    <string name="_8_characters">(8+characters)</string>
    <string name="your_username">Your username</string>
    <string name="success">success</string>
</resources>