<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    >

    <ImageView
        android:id="@+id/ivLogin"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30sp"
        android:src="@drawable/login_logo" />
    <androidx.cardview.widget.CardView
        android:id="@+id/cvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        app:cardCornerRadius="16sp"
        app:cardElevation="16sp"
        app:cardBackgroundColor="@color/pink"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_margin="8sp"
                android:fontFamily="@font/aclonica"
                android:text="@string/login_here"
                android:textColor="@color/darkpink"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="8sp"
                android:layout_marginRight="8sp"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:layout_marginBottom="5sp"
                android:background="@drawable/btnshape"
                android:hint="@string/your_username"
                android:inputType="text"
                android:paddingLeft="8sp"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="8sp"
                android:layout_marginRight="8sp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:background="@drawable/btnshape"
                android:layout_margin="5sp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:hint="@string/_8_characters"
                android:id="@+id/etPassword"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:paddingLeft="8sp"
                android:textColorHint="@color/black">
            </com.google.android.material.textfield.TextInputEditText>

            <CheckBox
                android:id="@+id/cbChecked"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:checked="false"
                android:fontFamily="monospace"
                android:text="@string/show_password"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/darkpink"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="150sp"
                android:layout_height="40sp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5sp"
                android:background="@drawable/btnshape"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvExtraText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="15sp"
                android:gravity="center_horizontal"
                android:text="@string/new_to_headspace_if_yes_click_here"

                android:textSize="15sp"
                android:textStyle="italic" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
