<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".RegistrationActivity"
        >
    <ImageView
        android:id="@+id/ivLogin"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30sp"
        android:src="@drawable/notebook" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cvHome"
            app:cardBackgroundColor="@color/pink"
            app:cardElevation="16sp"
            app:cardCornerRadius="16sp"
            android:layout_margin="16sp"
            >
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvHome"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20sp"
                    android:layout_marginTop="8sp"
                    android:textStyle="bold"
                    android:textColor="@color/darkpink"
                    android:text="@string/register_here"
                  android:fontFamily="@font/aclonica"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:id="@+id/etName"
                    android:hint="@string/enter_your_name"
                    android:textColorHint="@color/black"
                    android:background="@drawable/btnshape"
                    android:layout_margin="8sp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingLeft="8sp"
                    android:inputType="text"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:id="@+id/etMono"
                    android:hint="@string/enter_your_mobile_no"
                    android:textColorHint="@color/black"
                    android:background="@drawable/btnshape"
                    android:layout_margin="8sp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingLeft="8sp"
                    android:inputType="number"
                    />
                <EditText
                    android:id="@+id/etUser"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_margin="8sp"
                    android:background="@drawable/btnshape"
                    android:hint="@string/enter_your_username"
                    android:inputType="text"
                    android:paddingLeft="8sp"
                    android:textColorHint="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:id="@+id/etEmail"
                    android:hint="@string/enter_your_e_mail"
                    android:textColorHint="@color/black"
                    android:background="@drawable/btnshape"
                    android:layout_margin="8sp"
                    android:paddingLeft="8sp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:inputType="textEmailAddress"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:id="@+id/etDate"
                    android:hint="@string/enter_your_birthdate"
                    android:background="@drawable/btnshape"
                    android:layout_margin="8sp"
                    android:textColorHint="@color/black"
                    android:paddingLeft="8sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:inputType="date"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/darkpink"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40sp"
                        android:id="@+id/etPass"
                        android:background="@drawable/btnshape"
                        android:hint="@string/enter_your_password"
                        android:layout_margin="8sp"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:inputType="textPassword"
                        >
                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/darkpink"
                    android:textColorHint="@color/black"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40sp"
                        android:hint="@string/confirm_password"
                        android:id="@+id/etConfirm"
                        android:background="@drawable/btnshape"
                        android:layout_margin="8sp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:inputType="textPassword"
                        >
                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="150sp"
                    android:layout_height="40sp"
                    android:id="@+id/btnHome"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/btnshape"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_margin="8sp"
                    android:textStyle="bold"
                    />
            </LinearLayout>
        </ScrollView>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
