<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".instrumentalMusicActivity"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="30sp"
    android:layout_marginLeft="20sp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/now_playing"
        android:textSize="18sp"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSongName"
        android:text="@string/song_name"
        android:textSize="20sp"
        android:textColor="@color/darkpink"
        />
</LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="230sp"
        android:src="@drawable/music_player"
        android:id="@+id/ivSongimage"
        android:layout_marginTop="50sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:scaleType="fitXY"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_margin="20sp"
        android:gravity="center"
        >
        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:id="@+id/tvStartTime"
            android:layout_weight="0.5"
            android:text="@string/start_time"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sbProgress"
            android:layout_weight="2"
            android:thumbTint="@color/darkpink"
            android:progressTint="@color/darkpink"
            android:thumb="@drawable/heart"
            />
        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:id="@+id/tvTotaltime"
            android:layout_weight="0.5"
            android:text="@string/total_time"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        android:layout_margin="10sp"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:id="@+id/ivPrevious"
            android:layout_weight="1"
            android:src="@drawable/previous"
            />
        <ImageView
            android:layout_width="0sp"
            android:layout_height="20sp"
            android:id="@+id/ivBackword"
            android:layout_weight="1"
            android:src="@drawable/arrow_back"
            />
        <ImageView
            android:layout_width="0sp"
            android:layout_height="40sp"
            android:id="@+id/ivPlay"
            android:layout_weight="1"
            android:src="@drawable/baseline_play_circle_filled_24"
            />

        <ImageView
            android:layout_width="0sp"
            android:layout_height="20sp"
            android:id="@+id/ivForward"
            android:layout_weight="1"
            android:src="@drawable/forward"/>
        <ImageView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:id="@+id/ivNext"
            android:layout_weight="1"
            android:src="@drawable/next"
            />
    </LinearLayout>
</LinearLayout>